<resources>
    <string name="app_name">mathgame2.1</string>
    <string name="hintbutton_text">Hint</string>
    <string name="solutionButton_text">Solution</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="muliplication">*</string>
    <string name="division">/</string>
    <string name="openParenthesis">(</string>
    <string name="closeParenthesis">)</string>
    <string name="factorial">!</string>
    <string name="exponential">^</string>
    <string name="dot">.</string>
    <string name="openFloor">⌊</string>
    <string name="closeFloor">⌋</string>
    <string name="SubmitText">Submit</string>
    <string name="clear">C</string>
    <string name="clearAll">AC</string>
    <string name="squareRoot">√</string>
    <string name="leftArrow">←</string>
    <string name="rightArrow">→</string>


    <string name="level1">level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>
    <string name="level4">level 4</string>
    <string name="level5">level 5</string>
    <string name="level6">level 6</string>


    <string name="dark">Dark theme</string>
    <string name="light">Light theme</string>
    <string name="SysDef">Use system default</string>


    <string name="ttYourGoal">In this game, your goal is to make the expressions true, with adding in the operators like so</string>
    <string name="ttEquationEmpty">999=8</string>
    <string name="ttEquationSolved">9–9/9=8</string>

    <string name="ttexplainingOperators">Here you can see which sign performs which mathematical operation </string>

    <string name="ttExplAddition">The + sign corresponds to addition e.g. 5+5=10 </string>
    <string name="ttExplSubtraction">The – sign corresponds to subtraction e.g. 10–5=5</string>
    <string name="ttExplMultiplication">The * sign corresponds to multiplication e.g. 5*5=25</string>
    <string name="ttExplDivision">The / sign corresponds to division e.g. 32/4=8</string>
    <string name="ttExplExponentiation">The ^ sign corresponds to exponentiation e.g. 3^4 = 3*3*3*3 = 81</string>
    <string name="ttExplFloor"> The ⌊ ⌋ signs correspond to the floor function. This function takes any number as an input and outputs only the whole number part of it
    e.g.  ⌊2.4⌋ = 2, ⌊−2.4⌋ = −3, ⌈2.4⌉ = 3 and ⌈√15⌉=3  </string>
    <string name="ttExplFactorial">The ! sign corresponds to the factorial function. Factorial, in mathematics, is the product of all positive integers less than or equal to a given positive integer
    e.g. 7! = 1*2*3*4*5*6*7=5040, by </string>
    <string name="ttExplSquareRoot">The √ sign corresponds to taking the square root of a number. e.g. √9 = 3 √5=3.87298…</string>
    <string name="ttExpldoubleFactorial">the double factorial or semifactorial of a number n, denoted by n!!, is the product of all the integers from 1 up to n that have the same parity (odd or even) as n.
    e.g. 9!! = 3*5*7*9 by convention 0! = 1</string>
    <string name="ttExpldoubleSqrt">You can use 2 square root signs to get the fourth root e.g. √√8=2 √√5=1.4953487812 </string>

    <string name="returnText">return</string>
    <string name="tutorial">Tutorial</string>

    <string name="crown">crown</string>
</resources>