<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity"
    android:weightSum="10"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



        <TextView
            style="@style/dominantText"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ttYourGoal"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TTexplTV"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"


            android:text="@string/ttexplainingOperators"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView3"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ttExplAddition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView4"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExplSubtraction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView5"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExplMultiplication"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView6"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExplDivision"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TTexplTV"


                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ttExplExponentiation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView8"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExplSquareRoot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView9"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExplFloor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TTexplTV"


                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ttExplFactorial"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView11"


            android:layout_height="wrap_content"
            android:text="@string/ttExpldoubleFactorial"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="148dp"
            android:layout_marginStart="8dp"

            />

        <TextView
            style="@style/TTexplTV"
            android:id="@+id/textView12"


            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ttExpldoubleSqrt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/ttEquationEmpty"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/ttEquationSolved"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="26dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            style="@style/downarrow" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button"
            style="@style/SimpleButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
