<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/darkThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:onClick="darkTheme"/>

        <RadioButton
            android:id="@+id/lightThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:onClick="lightTheme"/>

        <RadioButton
            android:id="@+id/sysDefThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SysDef"
            android:onClick="sysDefTheme"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>