<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".puzzle1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/levelNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="Level 1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/crownCounterTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:text="0"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/crownCounterLogoIV"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/crownCounterLogoIV"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            style="@style/crownLogo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <EditText
                style="@style/myEditText"
                android:id="@+id/equationET0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,TextFields" />
            <EditText
                style="@style/myEditText"
                android:id="@+id/equationET1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:text=""
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@id/crownIV1"
                app:layout_constraintTop_toBottomOf="@id/equationET0"
                tools:ignore="Autofill,LabelFor,TextFields"/>

            <ImageView
                style="@style/crownLogo"
                android:id="@+id/crownIV0"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET0"/>
            <ImageView
                android:id="@+id/crownIV1"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET1"
                style = "@style/crownLogo" />
            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV2"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET2"/>

            <ImageView
                style="@style/crownLogo"
                android:id="@+id/crownIV3"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET3" />

            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV4"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET4"
                  />

            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV5"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET5"
                  />


            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV6"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET6"
                  />

            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV7"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET7"
                  />

            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV8"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET8"
                  />

            <ImageView
style="@style/crownLogo"
                android:id="@+id/crownIV9"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/crown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/equationET9"
                  />
            
            
            
            
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@id/equationET1"
                tools:ignore="Autofill,LabelFor,TextFields"/>

            <EditText
style="@style/myEditText"
                android:id="@+id/equationET3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET2"
                tools:ignore="Autofill,LabelFor,TextFields"/>

            <EditText
style="@style/myEditText"
                android:id="@+id/equationET4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET3"
                tools:ignore="Autofill,LabelFor,TextFields"/>
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET4"
                tools:ignore="Autofill,LabelFor,TextFields"/>
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET5"
                tools:ignore="Autofill,LabelFor,TextFields"/>
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET6"
                tools:ignore="Autofill,LabelFor,TextFields"/>
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET7"
                tools:ignore="Autofill,LabelFor,TextFields"/>
            <EditText
style="@style/myEditText"
                android:id="@+id/equationET9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:text=""
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/equationET8"
                tools:ignore="Autofill,LabelFor,TextFields"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent">

        <Button
            style="@style/hintSolutionButtons"
            android:text="@string/hintbutton_text"
            android:id="@+id/hintButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/solutionButtion"/>
        <Button
            android:text="@string/solutionButton_text"
            style="@style/hintSolutionButtons"
            android:id="@+id/solutionButtion"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/hintButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="bottom"
        android:weightSum="3"
        >

        <TableRow
            android:layout_weight="1"
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/plusButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minusButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/minus" />

            <Button
                android:id="@+id/mulitplicationButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/muliplication" />

            <Button
                android:id="@+id/divisonButton"
                style="@style/SimpleButtonStyle"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/division" />

            <Button
                android:id="@+id/SubmitButton"
                style="@style/TextedButtonStyle"
                android:text="@string/SubmitText"/>



        </TableRow>




        <TableRow
            android:layout_weight="1"

            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/exponentialButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/exponential" />

            <Button
                android:id="@+id/factorialButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/factorial" />

            <Button
                android:id="@+id/sqrtButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/squareRoot" />

            <Button
                android:id="@+id/ACButton"
                style="@style/SimpleButtonStyle"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/clearAll" />

            <Button
                android:id="@+id/CButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/clear" />

            <Button
                android:id="@+id/dotButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/dot" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <Button
                android:id="@+id/openParenthesisButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/openParenthesis" />

            <Button
                android:id="@+id/closeParenthesisButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/closeParenthesis" />

            <Button
                android:id="@+id/openFloorButton"
                style="@style/SimpleButtonStyle"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/openFloor" />

            <Button
                android:id="@+id/closeFloorButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/closeFloor" />
            <Button
                android:id="@+id/leftArrowButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/leftArrow"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/rightArrowButton"
                style="@style/SimpleButtonStyle"
                android:text="@string/rightArrow"
                android:textSize="24sp"/>


        </TableRow>


    </TableLayout>


</LinearLayout>